Cambio de palabra jugar por reservar

--- a/pages/quiero-jugar.html
+++ b/pages/quiero-jugar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quiero Jugar - GPADEL - Plataforma de Gestión de Padel</title>
+  <title>Quiero reservar - GPADEL - Plataforma de Gestión de Padel</title>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -19,7 +19,7 @@
 
       <!-- Navegación desktop -->
       <nav class="gp-nav">
-        <a href="quiero-jugar.html" class="gp-nav-link gp-nav-link--active">Quiero jugar</a>
+        <a href="quiero-jugar.html" class="gp-nav-link gp-nav-link--active">Quiero reservar</a>
         <a href="score.html" class="gp-nav-link">Quiero marcar</a>
         <a href="como-funciona" class="gp-nav-link">¿Cómo funciona?</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
@@ -43,7 +43,7 @@
 
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="quiero-jugar.html">Quiero jugar</a>
+      <a href="quiero-jugar.html">Quiero reservar</a>
       <a href="score.html">Quiero marcar</a>
       <a href="como-funciona.html">¿Cómo funciona?</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
@@ -54,7 +54,7 @@
   <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
   <section class="gp-pages-hero">
     <div class="gp-container">
-      <h1>Quiero Jugar</h1>
+      <h1>Quiero reservar</h1>
     </div>
   </section>
 
