--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -40,7 +40,7 @@
     </a>
 
     <nav class="gp-nav">
-      <a href="./quiero-jugar.html" class="gp-nav-link">Quiero jugar</a>
+      <a href="./quiero-jugar.html" class="gp-nav-link">Quiero reservar</a>
       <a href="./score.html" class="gp-nav-link">Quiero marcar</a>
       <a href="#como-funciona" class="gp-nav-link">¿Cómo funciona?</a>
       <a href="./contacto.html" class="gp-nav-link">Contacto</a>
@@ -62,7 +62,7 @@
 
   <!-- NAV MOBILE -->
   <nav class="gp-nav-mobile" id="gpMobileNav">
-    <a href="./quiero-jugar.html">Quiero jugar</a>
+    <a href="./quiero-jugar.html">Quiero reservar</a>
     <a href="./score.html">Quiero marcar</a>
     <a href="#como-funciona">¿Cómo funciona?</a>
     <a href="./canchas-ligas.html">Canchas o Ligas</a>
@@ -159,7 +159,7 @@
       <p>Organizá tus partidos y turnos desde un solo lugar.</p>
 
       <div class="gp-hero-cta">
-        <a href="./quiero-jugar.html" class="gp-btn gp-btn--primary">Quiero jugar</a>
+        <a href="./quiero-jugar.html" class="gp-btn gp-btn--primary">Quiero reservar</a>
         <a href="./score.html" class="gp-btn gp-btn--secondary">Quiero marcar</a>
       </div>
     </div>
