--- a/pages/como-funciona.html
+++ b/pages/como-funciona.html
@@ -19,7 +19,7 @@
 
       <!-- Navegación desktop -->
       <nav class="gp-nav">
-        <a href="quiero-jugar.html" class="gp-nav-link">Quiero reservar</a>
+        <a href="quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
         <a href="score.html" class="gp-nav-link">Quiero marcar</a>
         <a href="como-funciona.html" class="gp-nav-link gp-nav-link--active">¿Cómo funciona?</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
@@ -43,7 +43,7 @@
 
     <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
-      <a href="quiero-jugar.html">Quiero reservar</a>
+      <a href="quiero-reservar.html">Quiero reservar</a>
       <a href="score.html">Quiero marcar</a>
       <a href="como-funciona.html">¿Cómo funciona?</a>
       <a href="canchas-ligas.html">Canchas o Ligas</a>
