--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -19,7 +19,7 @@
     </a>
 
     <nav class="gp-nav">
-      <a href="quiero-jugar.html" class="gp-nav-link">Quiero reservar</a>
+      <a href="quiero-reservar.html" class="gp-nav-link">Quiero reservar</a>
       <a href="score.html" class="gp-nav-link gp-nav-link--active">Quiero marcar</a>
       <a href="como-funciona.html" class="gp-nav-link">¿Cómo funciona?</a>
       <a href="contacto.html" class="gp-nav-link">Contacto</a>
@@ -37,7 +37,7 @@
   </div>
 
   <nav class="gp-nav-mobile" id="gpMobileNav">
-    <a href="quiero-jugar.html">Quiero reservar</a>
+    <a href="quiero-reservar.html">Quiero reservar</a>
     <a href="score.html">Quiero marcar</a>
     <a href="como-funciona.html">¿Cómo funciona?</a>
     <a href="canchas-ligas.html">Canchas o Ligas</a>
